# epi

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  scratch.sh
data/: Makefile.am  Makefile.in
etc/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in  common.h  dbg.h  util.h
script/: Makefile.am  Makefile.in  hello.sh
script/python/: Makefile.am  Makefile.in  hello.py
script/util/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  hello.c
src/ch05/: 00_basic.cpp  01_parity.cpp  02_swap.cpp  03_reverse.cpp  04_find.cpp  05_multiply.cpp  06_divide.cpp  07_power.cpp  08_convert.cpp  09_decode.cpp  10_reverse.cpp  11_palindrome.cpp  12_random.cpp  13_intersect.cpp  14_open.cpp  15_gcd.cpp  Makefile.am  Makefile.in
src/ch06/: 01_inplace.cpp  02_increment.cpp  03_multiply.cpp  05_remove.cpp  06_unique.cpp  09_max_diff.cpp  10_max_product.cpp  11_lci.cpp  12_primes.cpp  14_permute.cpp  15_rotate.cpp  16_sample.cpp  17_rand_permute.cpp  18_rand_subset.cpp  Makefile.am  Makefile.in
src/ch07/: 01_convert.cpp  02_modify.cpp  03_palindrome.cpp  04_reverse.cpp  05_mnemonic.cpp  06_look_and_say.cpp  07_convert_roman.cpp  08_valid_ip.cpp  09_sinusoid.cpp  10_rle.cpp  11_gamma_encode.cpp  Makefile.am  Makefile.in
src/ch08/: 01_merge.cpp  Makefile.am  Makefile.in  list.hpp
src/ch09/: 01_max_stack.cpp  02_rpn.cpp  03_pbb.cpp  04_max_pbb.cpp  05_pathname.cpp  09_sort.cpp  Makefile.am  Makefile.in
src/ch10/: Makefile.am  Makefile.in  node.hpp
src/ch11/: 01_merge.cpp  02_sort.cpp  03_sort.cpp  04_knn.cpp  05_median.cpp  06_find.cpp  07_fair.cpp  08_k_median.cpp  10_k_heap.cpp  Makefile.am  Makefile.in
src/ch12/: 02_bsearch.cpp  03_bsearch.cpp  06_sqrt.cpp  07_sqrt.cpp  08_search.cpp  09_search.cpp  10_minmax.cpp  11_search.cpp  12_minimize.cpp  13_search.cpp  Makefile.am  Makefile.in
src/ch13/: 01_anagram.cpp  02_palindrome.cpp  03_search.cpp  04_cache.cpp  08_search.cpp  09_search.cpp  Makefile.am  Makefile.in
src/ch14/: 01_intersect.cpp  Makefile.am  Makefile.in
src/ch15/: Makefile.in
src/ch16/: 01_hanoi.cpp  Makefile.am  Makefile.in
src/ch17/: 01_sum.cpp  Makefile.am  Makefile.in
src/ch18/: Makefile.in
src/ch19/: Makefile.in
src/ch20/: Makefile.am  Makefile.in
src/ch21/: Makefile.in
