AM_CPPFLAGS = \
	-I$(top_srcdir)

noinst_PROGRAMS = \
	00_basic \
	01_inplace \
	02_increment \
	03_multiply \
	04_check \
	05_remove \
	06_unique \
	07_find \
	08_max_diff \
	09_max_diff \
	10_max_product \
	11_lci \
	12_primes \
	13_permute \
	14_permute \
	15_rotate \
	16_sample \
	17_rand_permute \
	18_rand_subset



00_basic_SOURCES = \
	00_basic.cpp

01_inplace_SOURCES = \
	01_inplace.cpp

03_multiply_SOURCES = \
	03_multiply.cpp

04_check_SOURCES = \
	04_check.cpp

05_remove_SOURCES = \
	05_remove.cpp

06_unique_SOURCES = \
	06_unique.cpp

07_find_SOURCES = \
	07_find.cpp

08_max_diff_SOURCES = \
	08_max_diff.cpp

09_max_diff_SOURCES = \
	09_max_diff.cpp

10_max_product_SOURCES = \
	10_max_product.cpp

11_lci_SOURCES = \
	11_lci.cpp

12_primes_SOURCES = \
	12_primes.cpp

13_permute_SOURCES = \
	13_permute.cpp

14_permute_SOURCES = \
	14_permute.cpp

15_rotate_SOURCES = \
	15_rotate.cpp

16_sample_SOURCES = \
	16_sample.cpp

17_rand_permute_SOURCES = \
	17_rand_permute.cpp

18_rand_subset_SOURCES = \
	18_rand_subset.cpp
