AM_CPPFLAGS = \
	-I$(top_srcdir)

noinst_PROGRAMS = \
	00_basic \
	01_convert \
	02_modify \
	03_palindrome \
	04_reverse \
	05_mnemonic \
	06_look_and_say \
	07_convert_roman \
	08_valid_ip \
	09_sinusoid \
	10_rle \
	11_gamma_encode


00_basic_SOURCES = \
	00_basic.cpp

01_convert_SOURCES = \
	01_convert.cpp

02_modify_SOURCES = \
	02_modify.cpp

03_palindrome_SOURCES = \
	03_palindrome.cpp

04_reverse_SOURCES = \
	04_reverse.cpp

05_mnemonic_SOURCES = \
	05_mnemonic.cpp

06_look_and_say_SOURCES = \
	06_look_and_say.cpp

07_convert_roman_SOURCES = \
	07_convert_roman.cpp

08_valid_ip_SOURCES = \
	08_valid_ip.cpp

09_sinusoid_SOURCES = \
	09_sinusoid.cpp

10_rle_SOURCES = \
	10_rle.cpp

11_gamma_encode_SOURCES = \
	11_gamma_encode.cpp
