AM_CPPFLAGS = \
	-I$(top_srcdir)

noinst_PROGRAMS = \
	00_basic \
	01_max_stack \
	02_rpn \
	03_pbb \
	04_max_pbb \
	05_pathname \
	09_sort

00_basic_SOURCES = \
	00_basic.cpp

01_max_stack_SOURCES = \
	01_max_stack.cpp

02_rpn_SOURCES = \
	02_rpn.cpp

03_pbb_SOURCES = \
	03_pbb.cpp

04_max_pbb_SOURCES = \
	04_max_pbb.cpp

05_pathname_SOURCES = \
	05_pathname.cpp

09_sort_SOURCES = \
	09_sort.cpp
