include $(top_srcdir)/mk/*

AM_CPPFLAGS = \
	-I$(top_srcdir)

noinst_PROGRAMS = \
	00_basic \
	01_bsearch \
	02_bsearch \
	03_bsearch \
	04_bsearch_cyclic \
	05_bsearch_unknown \
	06_sqrt \
	07_sqrt \
	08_search \
	09_search \
	10_minmax \
	11_search \
	12_minimize \
	13_search \
	14_search \
	15_search \
	16_search

00_basic_SOURCES = \
	00_basic.cpp

01_bsearch_SOURCES = \
	01_bsearch.cpp

02_bsearch_SOURCES = \
	02_bsearch.cpp

03_bsearch_SOURCES = \
	03_bsearch.cpp

04_bsearch_cyclic_SOURCES = \
	04_bsearch_cyclic.cpp

05_bsearch_unknown_SOURCES = \
	05_bsearch_unknown.cpp

06_sqrt_SOURCES = \
	06_sqrt.cpp

07_sqrt_SOURCES = \
	07_sqrt.cpp

08_search_SOURCES = \
	08_search.cpp

09_search_SOURCES = \
	09_search.cpp

10_minmax_SOURCES = \
	10_minmax.cpp

11_search_SOURCES = \
	11_search.cpp

12_minimize_SOURCES = \
	12_minimize.cpp

13_search_SOURCES = \
	13_search.cpp

14_search_SOURCES = \
	14_search.cpp

15_search_SOURCES = \
	15_search.ccpp

16_search_SOURCES = \
	16_search.cpp
