include $(top_srcdir)/mk/*

AM_CPPFLAGS = \
	-I$(top_srcdir)

noinst_PROGRAMS = \
	00_basic \
	01_anagram \
	02_palindrome \
	03_search \
	04_cache \
	05_lca \
	06_search \
	07_search \
	08_search \
	09_search \
	10_search

00_basic_SOURCES = \
	00_basic.cpp

01_anagram_SOURCES = \
	01_anagram.cpp

02_palindrome_SOURCES = \
	02_palindrome.cpp

03_search_SOURCES = \
	03_search.cpp

04_cache_SOURCES = \
	04_cache.cpp

05_lca_SOURCES = \
	05_lca.cpp

06_search_SOURCES = \
	06_search.cpp

07_search_SOURCES = \
	07_search.cpp

08_search_SOURCES = \
	08_search.cpp

09_search_SOURCES = \
	09_search.cpp

10_search_SOURCES = \
	10_search.cpp
